Fixed the scrolling to see the overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,8 @@ body,
 #root {
     height: 100%;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 * {
   box-sizing: border-box;
